@@ -1,83 +1,0 @@
-namespace MeGUI.packages.audio.audx
-{
-    partial class AudXConfigurationPanel
-    {
-        /// <summary>
-        /// Required designer variable.
-        /// </summary>
-        private System.ComponentModel.IContainer components = null;
-
-        /// <summary>
-        /// Clean up any resources being used.
-        /// </summary>
-        /// <param name="disposing">true if managed resources should be disposed; otherwise, false.</param>
-        protected override void Dispose(bool disposing)
-        {
-            if (disposing && (components != null))
-            {
-                components.Dispose();
-            }
-            base.Dispose(disposing);
-        }
-
-        #region Windows Form Designer generated code
-
-        /// <summary>
-        /// Required method for Designer support - do not modify
-        /// the contents of this method with the code editor.
-        /// </summary>
-        private void InitializeComponent()
-        {
-            this.label1 = new System.Windows.Forms.Label();
-            this.comboBox1 = new System.Windows.Forms.ComboBox();
-            this.encoderGroupBox.SuspendLayout();
-            this.SuspendLayout();
-            // 
-            // encoderGroupBox
-            // 
-            this.encoderGroupBox.Controls.Add(this.label1);
-            this.encoderGroupBox.Controls.Add(this.comboBox1);
-            this.encoderGroupBox.Location = new System.Drawing.Point(6, 158);
-            this.encoderGroupBox.Size = new System.Drawing.Size(380, 64);
-            this.encoderGroupBox.Text = "AudX Configuration Options";
-            // 
-            // besweetOptionsGroupbox
-            // 
-            this.besweetOptionsGroupbox.Location = new System.Drawing.Point(6, 3);
-            this.besweetOptionsGroupbox.Size = new System.Drawing.Size(380, 149);
-            // 
-            // label1
-            // 
-            this.label1.AutoSize = true;
-            this.label1.Location = new System.Drawing.Point(28, 27);
-            this.label1.Name = "label1";
-            this.label1.Size = new System.Drawing.Size(45, 13);
-            this.label1.TabIndex = 27;
-            this.label1.Text = "Quality :";
-            // 
-            // comboBox1
-            // 
-            this.comboBox1.DropDownStyle = System.Windows.Forms.ComboBoxStyle.DropDownList;
-            this.comboBox1.FormattingEnabled = true;
-            this.comboBox1.Location = new System.Drawing.Point(82, 24);
-            this.comboBox1.Name = "comboBox1";
-            this.comboBox1.Size = new System.Drawing.Size(289, 21);
-            this.comboBox1.TabIndex = 26;
-            // 
-            // AudXConfigurationPanel
-            // 
-            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
-            this.Name = "AudXConfigurationPanel";
-            this.Size = new System.Drawing.Size(394, 225);
-            this.encoderGroupBox.ResumeLayout(false);
-            this.encoderGroupBox.PerformLayout();
-            this.ResumeLayout(false);
-
-        }
-
-        #endregion
-
-        private System.Windows.Forms.Label label1;
-        private System.Windows.Forms.ComboBox comboBox1;
-    }
-}
